2004-06-02 Vangelis Rokas <vrokas AT otenet.gr>

        * src/pic16/gen.c (genPcall): warning about gpsim and PCLATU
	is commented out
                
2004-06-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genPointerGetSetOfs): disabled optimization if
	computed address is reused
	* src/hc08/gen.c (genPackBits): fixed offsets in assignments to
	multi-byte bitfields

2004-06-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/gen.c: (genArrayInit): must check for pointers too

2004-06-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/zeropad.c: never meant to commit the
	  nestedstruct test: removed, added check for GCC version

2004-05-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (createIvalArray): fixed bug 770487 SIGSEGV
	* src/SDCCglue.c (emitRegularMap): fixed bug 770484 allocation problem
	* src/SDCCglue.c (initPointer, printIvalType, printIvalStruct,
	  printIvalArray, printIvalFuncPtr, printIvalPtr, printIval): fixed
	  bugs 928906 and 954082 half-empty initializers
	* src/SDCCsymt.h,
	* src/SDCCsymt.c (getAllocSize): added for above fix
	* src/z80/gen.c (genArrayInit): fixed bug 741044
	* support/regression/tests/zeropad.c: added tests

2004-05-30 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/device.c (pic16_dump_section): corrected bug which
	caused some symbols of the libraries to be misplaced

2004-05-28 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/glue.c,
	* src/pic16/ralloc.h,
	* src/pic16/ralloc.cc: prefixed IS_CONFIG_ADDRESS with PIC16_
	to fix conflict with pic port

2004-05-28 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/glue.c (pic16emitStaticSeg): do not print as publics or
	externs configuration variables,
	* src/pic16/ralloc.h,
	* src/pic16/ralloc.cc: IS_CONFIG_ADDRESS is made public and added
	prototype in header, commented out some debug messages

2004-05-26 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/glue.c,
	* src/pic16/main.c,